Prepare for Developer Preview